--- a/application/admin/view/public/_left.html
+++ b/application/admin/view/public/_left.html
@@ -1,23 +1,60 @@
 <!-- Page Sidebar -->
 <div class="page-sidebar" id="sidebar">
     <ul class="nav sidebar-menu">
-        <li class="active">
+        {if condition="session('admin.id')!=1"}
+            {volist name="authList" id="vo"}
+                {if $vo.id==1}
+                <li>
+                    <a href="{:url('admin/Home/index')}">
+                        <i class="menu-icon fa fa-home"></i>
+                        <span class="menu-text">后台首页</span>
+                    </a>
+                </li>
+                {else /}
+                <li>
+                    <a class="menu-dropdown">
+                        <i class="menu-icon fa {$vo.icon}"></i>
+                        <span class="menu-text">{$vo.title}</span>
+                        <i class="menu-expand"></i>
+                    </a>
+                    <ul class="submenu" style="display: none;">
+                        {volist name="$vo.child" id="vv"}
+                        <li>
+                            <a href="{:url($vv.name)}">
+                                <span class="menu-text">{$vv.title}</span>
+                            </a>
+                        </li>
+                        {/volist}
+                    </ul>
+                </li>
+                {/if}
+            {/volist}
+        {else /}
+        <li>
             <a href="{:url('admin/Home/index')}">
                 <i class="menu-icon fa fa-home"></i>
                 <span class="menu-text">后台首页</span>
             </a>
         </li>
         <li>
-            <a href="{:url('admin/Templates/list')}">
+            <a class="menu-dropdown">
                 <i class="menu-icon fa fa-list-alt"></i>
-                <span class="menu-text">表单列表</span>
+                <span class="menu-text">表单管理</span>
+                <i class="menu-expand"></i>
             </a>
-        </li>
-        <li>
-            <a href="{:url('admin/Templates/add')}">
-                <i class="menu-icon fa fa-plus"></i>
-                <span class="menu-text">添加表单</span>
-            </a>
+            <ul class="submenu" style="display: none;">
+                <li>
+                    <a href="{:url('admin/Templates/list')}">
+                        <span class="menu-text">表单列表</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="{:url('admin/Templates/add')}">
+                        <span class="menu-text">添加表单</span>
+                    </a>
+
+                </li>
+            </ul>
         </li>
         <li>
             <a href="{:url('admin/MyData/index')}">
@@ -25,12 +62,36 @@
                 <span class="menu-text">我的数据集</span>
             </a>
         </li>
-        {if session('admin.is_super')==1}
         <li>
-            <a href="{:url('admin/Admin/list')}">
-                <i class="menu-icon fa fa-user"></i>
-                <span class="menu-text">用户列表</span>
+            <a href="{:url('admin/Cov/index')}">
+                <i class="menu-icon fa fa-server"></i>
+                <span class="menu-text">Cov2020</span>
             </a>
+        </li>
+        <li>
+            <a class="menu-dropdown">
+                <i class="menu-icon fa fa-users"></i>
+                <span class="menu-text">权限管理</span>
+                <i class="menu-expand"></i>
+            </a>
+            <ul class="submenu" style="display: none;">
+                <li>
+                    <a href="{:url('admin/Rule/index')}">
+                        <span class="menu-text">权限列表</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="{:url('admin/Rule/group')}">
+
+                        <span class="menu-text">用户组管理</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="{:url('admin/Admin/list')}">
+                        <span class="menu-text">用户列表</span>
+                    </a>
+                </li>
+            </ul>
         </li>
         {/if}
     </ul>
