--- a/application/admin/view/templates/list.html
+++ b/application/admin/view/templates/list.html
@@ -15,7 +15,7 @@
             </div>
             <div class="widget-body">
                 <div class="table-responsive">
-                    <table class="table table-hover table-bordered text-nowrap" style="padding: 2px;font-size: 10px;">
+                    <table class="table table-hover table-bordered text-nowrap" style="padding: 2px;">
                         <thead>
                             <tr>
                                 <th>表单名</th>
