--- a/application/admin/view/public/_left.html
+++ b/application/admin/view/public/_left.html
@@ -1,34 +1,34 @@
 <!-- Page Sidebar -->
 <div class="page-sidebar" id="sidebar">
     <ul class="nav sidebar-menu">
-        {if condition="session('admin.id')!=1"}
-            {volist name="authList" id="vo"}
-                {if $vo.id==1}
+        {if condition="session('admin.id')>5"}
+        {volist name="authList" id="vo"}
+        {if $vo.id==1}
+        <li>
+            <a href="{:url('admin/Home/index')}">
+                <i class="menu-icon fa fa-home"></i>
+                <span class="menu-text">后台首页</span>
+            </a>
+        </li>
+        {else /}
+        <li>
+            <a class="menu-dropdown">
+                <i class="menu-icon fa {$vo.icon}"></i>
+                <span class="menu-text">{$vo.title}</span>
+                <i class="menu-expand"></i>
+            </a>
+            <ul class="submenu" style="display: none;">
+                {volist name="$vo.child" id="vv"}
                 <li>
-                    <a href="{:url('admin/Home/index')}">
-                        <i class="menu-icon fa fa-home"></i>
-                        <span class="menu-text">后台首页</span>
+                    <a href="{:url($vv.name)}">
+                        <span class="menu-text">{$vv.title}</span>
                     </a>
                 </li>
-                {else /}
-                <li>
-                    <a class="menu-dropdown">
-                        <i class="menu-icon fa {$vo.icon}"></i>
-                        <span class="menu-text">{$vo.title}</span>
-                        <i class="menu-expand"></i>
-                    </a>
-                    <ul class="submenu" style="display: none;">
-                        {volist name="$vo.child" id="vv"}
-                        <li>
-                            <a href="{:url($vv.name)}">
-                                <span class="menu-text">{$vv.title}</span>
-                            </a>
-                        </li>
-                        {/volist}
-                    </ul>
-                </li>
-                {/if}
-            {/volist}
+                {/volist}
+            </ul>
+        </li>
+        {/if}
+        {/volist}
         {else /}
         <li>
             <a href="{:url('admin/Home/index')}">
@@ -57,16 +57,32 @@
             </ul>
         </li>
         <li>
-            <a href="{:url('admin/MyData/index')}">
-                <i class="menu-icon fa fa-server"></i>
+            <a class="menu-dropdown">
+                <i class="menu-icon fa fa-database"></i>
                 <span class="menu-text">我的数据集</span>
+                <i class="menu-expand"></i>
             </a>
+            <ul class="submenu" style="display: none;">
+                <li>
+                    <a href="{:url('admin/MyData/index')}">
+                        <span class="menu-text">数据集列表</span>
+                    </a>
+                </li>
+            </ul>
         </li>
         <li>
-            <a href="{:url('admin/Cov/index')}">
-                <i class="menu-icon fa fa-server"></i>
+            <a class="menu-dropdown">
+                <i class="menu-icon fa"></i>
                 <span class="menu-text">Cov2020</span>
+                <i class="menu-expand"></i>
             </a>
+            <ul class="submenu" style="display: none;">
+                <li>
+                    <a href="{:url('admin/Cov/index')}">
+                        <span class="menu-text">工作台</span>
+                    </a>
+                </li>
+            </ul>
         </li>
         <li>
             <a class="menu-dropdown">
