--- a/application/admin/view/admin/list.html
+++ b/application/admin/view/admin/list.html
@@ -42,7 +42,7 @@
                                     <a href="#" class="admin-status btn btn-success btn-xs" dataid="{$vo.id}"
                                         status="{$vo.status}">启用</a>
                                     {/if}
-                                    <a href=" {:url( 'admin/Admin/edit',[ 'id'=>$vo.id])}"
+                                    <a href=" {:url( 'admin/Admin/edit',[ 'id'=>$vo.id,'sid'=>17])}"
                                         class="btn btn-azure btn-xs">编辑</a>
                                     <a href="#" class="btn btn-danger btn-xs admin-del" dataid="{$vo.id}">删除</a>
 
@@ -53,7 +53,7 @@
                     </table>
                 </div>
                 <div class="form-group text-align-right" style="margin-top: 20px;">
-                    <a href="{:url( 'admin/Admin/add')}"><button type="button" class="btn btn-info">
+                    <a href="{:url( 'admin/Admin/add',['sid'=>17])}"><button type="button" class="btn btn-info">
                             添加用户
                         </button></a>
                 </div>
