--- a/application/admin/view/cov/index.html
+++ b/application/admin/view/cov/index.html
@@ -1,100 +1,79 @@
 {extend name="public/admin_base"}
 
 {block name="page-main"}
-sdsfd
-{/block}
-{block name="page-main"}
 <div class="row">
-    <div class="col-lg-12">
+    <div class="col-xs-12">
         <div class="widget">
-            <div class="bg-themeprimary widget-header">
-                <i class="fa fa-arrow-left widget-icon"
-                    onClick="window.location.href='{:url(\'admin/Cov/index\')}';" /></i>
-                <span class="widget-caption">上传图片</span>
-            </div>
-            <div class="widget-body">
-                <button id="singleUpload">上传情况单</button>
-                <form enctype="multipart/form-data">
-                    <div class="file-loading">
-                        <input id="kv-explorer" type="file" multiple>
-                    </div>
-                    <br>
-                    <div class="file-loading">
-                        <input id="file-0a" class="file" type="file" multiple data-min-file-count="1" data-theme="fas">
-                    </div>
-                    <br>
-                    <button type="submit" class="btn btn-primary">Submit</button>
-                    <button type="reset" class="btn btn-outline-secondary">Reset</button>
-                </form>
+            <ul class="nav nav-tabs padding-12 tab-color-blue background-blue" id="myTab">
+                <li class="active">
+                    <a href="#index" data-toggle="tab">报告列表</a>
+                </li>
+            </ul>
+            <div class="widget-body tab-content">
+                <div id="index" class="table-responsive tab-pane fade in active">
+                    <table class="table table-hover table-bordered text-nowrap">
+                        <thead>
+                            <tr>
+                                <th>标题</th>
+                                <th>状态</th>
+                                <th>操作</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {volist name="datas" id="vo"}
+                            <tr>
+                                <td>{$vo.title} </td>
+                                <td>{if $vo.status==1}正常{else /}<p style="color:red;">禁用</p>{/if}</td>
+                                <td>
+                                    <a href="{:url('admin/Cov/perDayReports',['date'=>$vo.date,'sid'=>15])}"
+                                        class="btn btn-success btn-xs">查看</a>
+                                    <a href="#" class="btn btn-danger btn-xs report-del" dataid="{$vo.id}">删除</a>
+                                </td>
+                            </tr>
+                            {/volist}
+                        </tbody>
+                    </table>
+                </div>
+                
+                <div class="form-group text-align-right" style="margin-top: 20px;">
+                    <a href="{:url('admin/Cov/newReport')}"><button type="button" class="btn btn-info">
+                            添加用户
+                        </button></a>
+                </div>
             </div>
         </div>
     </div>
 </div>
-
 {/block}
 
 {block name="page-js"}
 <script>
-    $("#singleUpload").click(function () {
-        layer.open({
-            type: 2,
-            skin: 'layui-layer-rim', //加上边框
-            area: ['820px', '640px'], //宽高
-            content: 'single.html'
-        });
-    })
-</script>
-<script src="__LIB__/bootstrap-fileinput/js/fileinput.min.js"></script>
-<script src="__LIB__/bootstrap-fileinput/js/locales/zh.js"></script>
-<link rel="stylesheet" href="__LIB__/bootstrap-fileinput/css/fileinput.min.css">
+    $('.report-del').click(function () {
 
-<script>
-    $("#kv-explorer").fileinput({
-        theme: 'explorer-fas',
-        language: 'zh', //设置语言
-        uploadUrl: 'cov_ajax_upload', //上传的地址
-        allowedFileExtensions: ['jpg', 'gif', 'png'],//接收的文件后缀
-        showUpload: true, //是否显示上传按钮
-        showCaption: false,//是否显示标题
-        browseClass: "btn btn-primary", //按钮样式     
-        dropZoneEnabled: false,//是否显示拖拽区域
-        minImageWidth: 50, //图片的最小宽度
-        minImageHeight: 50,//图片的最小高度
-        maxImageWidth: 1000,//图片的最大宽度
-        maxImageHeight: 1000,//图片的最大高度
-        maxFileSize: 0,//单位为kb，如果为0表示不限制文件大小
-        minFileCount: 0,
-        maxFileCount: 2, //表示允许同时上传的最大文件个数
-        enctype: 'multipart/form-data',
-        validateInitialCount: true,
-        previewFileIcon: "<i class='glyphicon glyphicon-king'></i>",
-        msgFilesTooMany: "选择上传的文件数量({n}) 超过允许的最大数值{m}！",
-        overwriteInitial: false,
-        initialPreviewAsData: true,
-        initialPreview: [
-        ],
-        initialPreviewConfig: [
-        ]
-    });
-    $("#file-0a").fileinput({
-        language: 'zh', //设置语言
-        uploadUrl: 'cov_ajax_upload', //上传的地址
-        allowedFileExtensions: ['jpg', 'gif', 'png'],//接收的文件后缀
-        showUpload: true, //是否显示上传按钮
-        showCaption: false,//是否显示标题
-        browseClass: "btn btn-primary", //按钮样式     
-        dropZoneEnabled: false,//是否显示拖拽区域
-        minImageWidth: 50, //图片的最小宽度
-        minImageHeight: 50,//图片的最小高度
-        maxImageWidth: 1000,//图片的最大宽度
-        maxImageHeight: 1000,//图片的最大高度
-        maxFileSize: 0,//单位为kb，如果为0表示不限制文件大小
-        minFileCount: 0,
-        maxFileCount: 2, //表示允许同时上传的最大文件个数
-        enctype: 'multipart/form-data',
-        validateInitialCount: true,
-        previewFileIcon: "<i class='glyphicon glyphicon-king'></i>",
-        msgFilesTooMany: "选择上传的文件数量({n}) 超过允许的最大数值{m}！",
+        var id = $(this).attr('dataid');
+        layer.confirm('确定删除该记录吗？', {
+            title: '删除确认',
+            icon: 3
+        }, function (index) {
+            layer.close(index);
+            $.ajax({
+                url: "{:url('admin/Cov/del')}",
+                type: 'post',
+                data: {
+                    id: id
+                },
+                dataType: 'json',
+                success: function (data) {
+                    if (data.code == 1) {
+                        showMsgAndHref(data)
+                    } else {
+                        showErrorMsg(data.msg)
+                    }
+                }
+            });
+
+        });
+        return false;
     });
 </script>
 {/block}
