--- a/application/admin/view/rule/group.html
+++ b/application/admin/view/rule/group.html
@@ -5,21 +5,16 @@
 <div class="row">
 	<div class="col-lg-12">
 		<div class="widget">
-			<div class="widget-header">
-				<i class="fa fa-arrow-left widget-icon"
-					onClick="window.location.href='{:url(\'admin/Home/index\')}';" /></i>
-				<span class="widget-caption">用户组列表</span>
-			</div>
+			<ul class="nav nav-tabs padding-12 tab-color-blue background-blue" id="myTab">
+				<li class="active">
+					<a href="#home" data-toggle="tab">用户组列表</a>
+				</li>
+				<li>
+					<a href="javascript:;" onclick="add()">添加用户组</a>
+				</li>
+			</ul>
 			<div class="widget-body">
 				<div class="tabbable">
-					<ul class="nav nav-tabs padding-12 tab-color-blue background-blue" id="myTab">
-						<li class="active">
-							<a href="#home" data-toggle="tab">用户组列表</a>
-						</li>
-						<li>
-							<a href="javascript:;" onclick="add()">添加用户组</a>
-						</li>
-					</ul>
 					<div class="tab-content">
 						<table class="table table-striped table-bordered table-hover table-condensed">
 							<tr>
@@ -34,8 +29,8 @@
 										onclick="edit(this)">修改</a> |
 									<a href="#" dataid="{$v['id']}" class="deleteThis">删除</a>
 									|
-									<a href="{:url('admin/rule/rule_group',array('id'=>$v['id']))}">分配权限</a> |
-									<a href="{:url('admin/rule/check_user',array('group_id'=>$v['id']))}">添加成员</a>
+									<a href="{:url('admin/rule/rule_group',array('id'=>$v['id'],'sid'=>27))}">分配权限</a> |
+									<a href="{:url('admin/rule/check_user',array('group_id'=>$v['id'],'sid'=>27))}">添加成员</a>
 								</td>
 							</tr>
 							{/volist}
