--- a/application/admin/view/cov/index.html
+++ b/application/admin/view/cov/index.html
@@ -37,7 +37,7 @@
                 
                 <div class="form-group text-align-right" style="margin-top: 20px;">
                     <a href="{:url('admin/Cov/newReport')}"><button type="button" class="btn btn-info">
-                            添加用户
+                            添加今日报告
                         </button></a>
                 </div>
             </div>
