--- a/application/admin/view/rule/group.html
+++ b/application/admin/view/rule/group.html
@@ -18,11 +18,13 @@
 					<div class="tab-content">
 						<table class="table table-striped table-bordered table-hover table-condensed">
 							<tr>
+								<th>用户组id</th>
 								<th>用户组名</th>
 								<th>操作</th>
 							</tr>
 							{volist name="data" id="v"}
 							<tr>
+								<td>{$v['id']}</td>
 								<td>{$v['title']}</td>
 								<td>
 									<a href="javascript:;" ruleId="{$v['id']}" ruleTitle="{$v['title']}"
