--- a/application/admin/view/public/admin_base.html
+++ b/application/admin/view/public/admin_base.html
@@ -11,17 +11,6 @@
     <link href="__CSS__/font-awesome.min.css" rel="stylesheet" />
     <link id="beyond-link" href="__CSS__/beyond.min.css" rel="stylesheet" type="text/css" />
     <link href="__CSS__/main.css" rel="stylesheet" type="text/css" />
-    <style>
-        input[type=checkbox],
-        input[type=radio] {
-            opacity:unset;
-            position:unset;
-        }
-
-        a:hover{
-            cursor:pointer; 
-        }
-    </style>
     {block name="page-style"}
     {/block}
 </head>
@@ -39,47 +28,6 @@
                     </a>
                 </div>
                 <!-- /Navbar Barnd -->
-                <!-- Account Area and Settings --->
-                <div class="navbar-header pull-right">
-                    <div class="navbar-account">
-                        <ul class="account-area">
-                            <li class="">
-                                <a class="login-area dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-                                    <div class="avatar">
-                                        <img src="__IMG__/moren.jpg" alt="" srcset="">
-                                    </div>
-                                    <section style="min-width:30px">
-                                        <h2><span class="profile"><span>{:session('admin.username')}</span></span>
-                                        </h2>
-                                    </section>
-                                </a>
-                                <!--Login Area Dropdown-->
-                                <ul class="pull-right dropdown-menu dropdown-arrow dropdown-login-area">
-                                    <li class="dropdown-footer">
-                                        <a href="#" class="loginout">退出</a>
-                                    </li>
-                                </ul>
-                                <!--/Login Area Dropdown-->
-                            </li>
-                            <!-- /Account Area -->
-                            <!--Note: notice that setting div must start right after account area list.
-                            no space must be between these elements-->
-                            <!-- Settings -->
-                        </ul>
-                        <!-- Settings -->
-                    </div>
-                    <!-- <div class="navbar-account">
-                        <ul class="account-area">
-                            <li>
-                                <div class="login-area">
-                                    <span>{:session('admin.username')}</span>
-                                    <span><a href="#" id="loginout">退出</a></span>
-                                </div>
-                            </li>
-                        </ul>
-                    </div> -->
-                </div>
-                <!-- /Account Area and Settings -->
             </div>
         </div>
     </div>
@@ -103,6 +51,23 @@
                                 onClick="window.location.href='{:url(\'admin/Home/index\')}';"></i>控制面板</li>
                         {block name="page-breadcrumb"}{/block}
                     </ul>
+                    <div class="navbar-header pull-right" style="margin-right: 50px;">
+                        <div class="navbar-account">
+                            <a class="login-area dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+                                <section style="min-width:30px">
+                                    <span class="profile"><span>{:session('admin.username')}</span></span>
+                                    </>
+                                </section>
+                            </a>
+                            <!--Login Area Dropdown-->
+                            <ul class="pull-right dropdown-menu dropdown-arrow dropdown-login-area">
+                                <li class="dropdown-footer">
+                                    <a href="#" class="loginout">退出</a>
+                                </li>
+                            </ul>
+                            <!--/Login Area Dropdown-->
+                        </div>
+                    </div>
                 </div>
                 <!-- /Page Breadcrumb -->
                 <!-- Page Body -->
